--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <link rel="preload" href="src/assets/fonts/AlibabaPuHuiTi-Medium.woff2" as="font" type="font/woff2" crossorigin> 
+    <link rel="stylesheet" href="src/assets/fonts/_fonts.styl" as="style">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
   </head>
